Pull request #235: Okoroleva MM-4461 mvnCentral
Merge in MML/infobip-mobile-messaging-android from okoroleva-MM-4461-mvnCentral to master

Squashed commit of the following:

commit 876ed982cb7f15300fb8e200da666c6051c7ffd3
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Apr 6 11:25:35 2021 +0300

    minor changes in readme and demo

commit ea2bf1ffd7caba31f096cd8536d929d99dc4c741
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Apr 6 10:21:47 2021 +0300

    removed commented bintray stuff from gradle.build

commit 081734509cb512bfa50bd7507651676d767bf3d8
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Apr 5 17:56:45 2021 +0000

    [Gradle Release Plugin] - new version commit:  '5.1.0-SNAPSHOT'.

commit 3e9e51319ed6db5a57f37e05377b16b63735192b
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Apr 5 17:56:42 2021 +0000

    [Gradle Release Plugin] - pre tag commit:  '5.1.0-test3'.

commit 177a2438fa1a42ea36061ff4b495d11ac0f6bf5f
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Apr 5 16:35:49 2021 +0000

    [Gradle Release Plugin] - new version commit:  '5.1.0-SNAPSHOT'.

commit 3edb94f737931d5b4b23933262c878f0d11d91a8
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Apr 5 16:02:14 2021 +0000

    [Gradle Release Plugin] - pre tag commit:  '5.1.0-test3'.

commit cbab87a82ed1e30efdfa02b48e65650ec735af56
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Apr 5 15:32:55 2021 +0000

    [Gradle Release Plugin] - new version commit:  '5.1.0-SNAPSHOT'.

commit 87237912ad020279c3af3106fd271966ae8053a4
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Apr 5 15:32:53 2021 +0000

    [Gradle Release Plugin] - pre tag commit:  '5.1.0-test3'.

commit 04cd975e8a86043cd1c15c973d7e557795d80145
Merge: 6f779454 eb446d2c
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Apr 5 18:15:45 2021 +0300

    Merge branch 'okoroleva-MM-4461-mvnCentral' of ssh://git.ib-ci.com:7999/mml/infobip-mobile-messaging-android

--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,22 @@
 buildscript {
-    ext {
-        artifactoryUsername = project.hasProperty('artifactoryUsername') ? project['artifactoryUsername'] : System.getenv('ARTIFACTORY_USERNAME')
-        artifactoryPassword = project.hasProperty('artifactoryPassword') ? project['artifactoryPassword'] : System.getenv('ARTIFACTORY_PASSWORD')
-    }
 
     repositories {
         jcenter()
         maven {
-            url 'https://oss.jfrog.org/artifactory/plugins-release'
-            credentials {
-                username = "${artifactoryUsername}"
-                password = "${artifactoryPassword}"
-            }
-        }
-        maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.4.7'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.0'
     }
 }
 
 plugins {
     id 'net.researchgate.release' version '2.8.1'
-    id 'com.jfrog.artifactory' version '4.4.7'
-    id 'com.jfrog.bintray' version '1.7.3'
+    id 'maven-publish'
 }
 
 ext {
@@ -45,6 +33,7 @@ ext {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -52,47 +41,11 @@ allprojects {
     }
 }
 
+apply plugin: 'io.codearte.nexus-staging'
+
 subprojects {
     apply plugin: "maven"
-    apply plugin: "com.jfrog.artifactory"
-
-    def repo = version.endsWith('SNAPSHOT') ? 'oss-snapshot-local' : 'oss-release-local'
-    def artifactoryUrl = System.getenv('ARTIFACTORY_URL') ? System.getenv('ARTIFACTORY_URL') : "https://oss.jfrog.org/artifactory"
-
-    task checkProperties {
-        doLast {
-            if (!"${artifactoryUsername}") {
-                throw new RuntimeException("Couldn't find artifactoryUsername property. Did you forget to specify it in ~/.gradle/gradle.properties or env.ARTIFACTORY_USERNAME?")
-            } else if (!"${artifactoryPassword}") {
-                throw new RuntimeException("Couldn't find artifactoryPassword property. Did you forget to specify it in ~/.gradle/gradle.properties or env.ARTIFACTORY_PASSWORD?")
-            }
-        }
-    }
-
-    artifactoryPublish.dependsOn(checkProperties)
-
-    artifactory {
-        contextUrl = artifactoryUrl
-        publish {
-            repository {
-                repoKey = "${repo}"
-                username = "${artifactoryUsername}"
-                password = "${artifactoryPassword}"
-                maven = true
-            }
-            defaults {
-                publishConfigs('archives')
-            }
-        }
-        resolve {
-            repository {
-                repoKey = 'libs-release'
-                username = "${artifactoryUsername}"
-                password = "${artifactoryPassword}"
-                maven = true
-            }
-        }
-    }
+    apply plugin: "maven-publish"
 }
 
 task clean(type: Delete) {
@@ -111,8 +64,15 @@ task updateVersionInReadme {
 
 afterReleaseBuild.dependsOn updateVersionInReadme
 
+// workaround for `net.researchgate.release` plugin issue:
+// https://github.com/researchgate/gradle-release/issues/186
+task build {}
+build.dependsOn subprojects.findAll {!it.name.contains("demo")}.build
+
+afterReleaseBuild.dependsOn subprojects.publish
+
 release {
-    buildTasks = ['clean', 'build', 'bintrayUpload']
+    buildTasks = ['clean', 'build']
     git {
         requireBranch = ''
         pushToRemote = 'origin'
