--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 version=5.1.0-SNAPSHOT
-group=org.infobip.mobile.messaging.api
+group=com.infobip
