--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -1,8 +1,3 @@
-buildscript {
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-    }
-}
 
 plugins {
     id 'java'
@@ -11,8 +6,6 @@ plugins {
     id 'idea'
     id 'io.freefair.lombok' version '4.1.0'
 }
-
-apply plugin: 'com.jfrog.bintray'
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
@@ -90,16 +83,7 @@ dependencies {
     testImplementation "org.mockito:mockito-core:1.10.19"
 }
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    configurations = ['archives']
-    publish = true
-    pkg {
-        repo = 'maven'
-        name = 'infobip-mobile-messaging-api-java'
-        userOrg = 'infobip'
-        licenses = ['Apache-2.0']
-        vcsUrl = "https://github.com/infobip/mobile-messaging-sdk-android"
-    }
+ext {
+    PUBLISH_ARTIFACT_ID = 'infobip-mobile-messaging-api-java'
 }
+apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
