sonatype host changed

--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -70,7 +70,7 @@ publishing {
     repositories {
         maven {
             name = "SonatypeReleases"
-            url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
 
             credentials {
                 username ossrhUsername
