nexus publishing added

--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -67,30 +67,19 @@ publishing {
             }
         }
     }
-    repositories {
-        maven {
-            name = "SonatypeReleases"
-            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-
-            credentials {
-                username ossrhUsername
-                password ossrhPassword
-            }
-        }
-    }
+//    repositories {
+//        maven {
+//            name = "SonatypeReleases"
+//            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+//
+//            credentials {
+//                username ossrhUsername
+//                password ossrhPassword
+//            }
+//        }
+//    }
 }
 
 signing {
     sign publishing.publications
-}
-
-//will work only if not more than one staging repo is opened.
-nexusStaging {
-    serverUrl = "https://s01.oss.sonatype.org/service/local/"
-    packageGroup = group
-    stagingProfileId = sonatypeStagingProfileId
-    username = ossrhUsername
-    password = ossrhPassword
-    numberOfRetries = 50
-    delayBetweenRetriesInMillis = 3000
 }
