Pull request #252: Feature/okoroleva MM-4843 Android12Fixes
Merge in MML/infobip-mobile-messaging-android from feature/okoroleva-MM-4843_Android12Fixes to feature/release_6.0.0

Squashed commit of the following:

commit 3d14e7d5592ffa81cf888046a078625149d91c39
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Nov 17 19:45:43 2021 +0300

    google.services comment out

commit 9e6d3053c1276dbd9d8c2931a78f288295e324c9
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Nov 16 13:16:24 2021 +0300

    removed appCode

commit 9e82c6b1848efa34440cde24a29de7774d52a012
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Nov 15 18:30:18 2021 +0300

    fixes

commit df0627a5c10a2a4c5ceda06305b8993bc9c5ef64
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Nov 15 16:06:09 2021 +0300

    get rid of trampoline at NotificationTapReceiver

commit f70d424091c956594d0bb6d3053bf6f0f2006c4f
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Nov 12 18:19:18 2021 +0300

    fixed trampoline for notification tap

commit 104dd3e2bad40d1cf96bdf2807c88efbe1f2d4fb
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Nov 10 18:57:02 2021 +0300

    PendingIntents and exported for Manifests

--- a/infobip-mobile-messaging-android-geo-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-geo-sdk/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
 
         <receiver
             android:name="org.infobip.mobile.messaging.geo.BootReceiver"
-            android:enabled="false">
+            android:enabled="false"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -36,7 +37,8 @@
             android:enabled="false" />
         <receiver
             android:name="org.infobip.mobile.messaging.geo.GeofencingConsistencyReceiver"
-            android:enabled="false">
+            android:enabled="false"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.TIME_SET" />
             </intent-filter>
@@ -49,7 +51,8 @@
         <!--Receiver used for versions below Android O-->
         <receiver
             android:name="org.infobip.mobile.messaging.geo.GeoEnabledConsistencyReceiver"
-            android:enabled="false">
+            android:enabled="false"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.location.PROVIDERS_CHANGED" />
             </intent-filter>
