--- a/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
@@ -8,7 +8,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/main_activity_title"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
