--- a/infobip-mobile-messaging-android-demo/src/push/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/push/AndroidManifest.xml
@@ -7,7 +7,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/main_activity_title"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
