--- a/infobip-mobile-messaging-android-geo-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-geo-sdk/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
-        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
