--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,6 @@ version=5.4.0-SNAPSHOT
 group=com.infobip
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.daemon=true
-org.gradle.configureondemand=true
+#org.gradle.daemon=true
+#org.gradle.configure?ondemand=true
 org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
