Pull request #260: MM-4820 geo to androidx
Merge in MML/infobip-mobile-messaging-android from aboldyrev-MM-4820_geo_to_androidx to release_6.0.0

Squashed commit of the following:

commit ac03f2d22d11ea8d3125bf9e4eda3cddf82dc2ac
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Mon Jan 24 18:58:58 2022 +0300

    GeoEnabledConsistencyReceiver test updated

commit a9e9252da50d1a04c96178e69bdeece63885aa59
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Sun Jan 23 20:36:10 2022 +0300

    Consistency receiver updated

commit ee6024d37aa94f3279d1d299f6622e22647a309d
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Fri Dec 31 14:19:54 2021 +0300

    removed unused method

commit 5ecd93f97cdfa09776a69a56191b17efd230d6da
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed Dec 29 22:54:29 2021 +0300

    MM 4820

commit 52802955a39de10cf9c517f33e7a2c3723ec1d86
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed Dec 29 16:46:25 2021 +0300

    removed unnecessary code

commit 9b0dfbc659c654286a5701aa5219ecfb925bd6e8
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed Dec 29 16:03:40 2021 +0300

    removed unnecessary code

commit 05a60ae977c6cc7c286af798e4226bce81f49d4f
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed Dec 29 11:28:20 2021 +0300

    moved to new components

--- a/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.infobip.mobile.messaging.demo">
 
     <application
@@ -9,6 +10,5 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="org.infobip.mobile.messaging.demo.Application">
-
     </application>
 </manifest>
