Pull request #263: Cryptor migration demo + fixes of implementation on SDK
Merge in MML/infobip-mobile-messaging-android from okoroleva-MM-4978_CryptorDemo to release_6.0.0

Squashed commit of the following:

commit 902c65aa603b867dc49ce3a5d2f03bdf7b39d067
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Feb 4 13:09:46 2022 +0300

    Cryptor migration demo + fixes of implementation on SDK

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -78,6 +78,10 @@ android {
         customInApp {
             dimension "default"
         }
+
+        cryptorMigration {
+            dimension "default"
+        }
     }
 }
 
