Pull request #266: fix for opening urls in browser
Merge in MML/infobip-mobile-messaging-android from okoroleva-MM-4970_queries to master

Squashed commit of the following:

commit cdb7488ba7779947f04d94006e3a3138fd2f1337
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Feb 11 14:04:05 2022 +0300

    fix for opening urls in browser

--- a/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.infobip.mobile.messaging">
 
+    <queries>
+        <!-- Browser -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
