Pull request #270: added new module for migration from old cryptor
Merge in MML/infobip-mobile-messaging-android from okoroleva-MM-4819_Cryptor to master

Squashed commit of the following:

commit 850d1fdb82759cd112a3bced2da5aa0ef4be3130
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Apr 11 16:48:37 2022 +0300

    fixes

commit 144e4f8cb8fc49610e08f44512657c1631ab454c
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Apr 11 15:52:15 2022 +0300

    added new module for migration from old cryptor

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -102,6 +102,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+
+    //To add cryptor use build flavour "cryptorMigration"
+    cryptorMigrationImplementation project(":infobip-mobile-messaging-android-cryptor-migration")
 }
 
 private static String property(Project project, String projectKey, String environmentKey) {
