--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     implementation project(":infobip-mobile-messaging-android-resources")
     implementation project(":infobip-mobile-messaging-android-sdk")
     implementation project(":infobip-mobile-messaging-api-java")
+    implementation project(":infobip-mobile-messaging-android-inbox")
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
