Pull request #275: Aboldyrev MM-5082 jwt
Merge in MML/infobip-mobile-messaging-android from aboldyrev_MM-5082_jwt to inbox

Squashed commit of the following:

commit eaaa579cfd0595f3993306bff7db2f752f532b48
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Thu Jul 14 11:12:52 2022 +0300

    after PR tests

commit d3f72a75d240eeeda54c4ccedc3cc1d39af7d686
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jul 13 21:09:57 2022 +0300

    after PR tests

commit a9dab2369b65993d2a57996435d96e09faed0060
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jul 13 20:00:51 2022 +0300

    descriptions

commit 88ab527aeaddf05bc331c3458b7d13884e0f8bd8
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jul 13 19:54:17 2022 +0300

    and additional test

commit 3ed5382d2bd025a15fd9c615e5fe860f1fcda4a5
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jul 13 19:13:48 2022 +0300

    tests en proper package

commit 7c4333f22f20ec43495c87af7a77b7bdd9bf7863
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jul 13 19:02:26 2022 +0300

    putting extra

commit 556ef7e222ee73d17811574ca930f4ef80825d35
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Thu Jun 30 15:21:22 2022 +0300

    back again

commit df6cbb13c4b4fe3d151f6eab8e4062e46b0f24b3
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Thu Jun 30 14:11:50 2022 +0300

    mapper cares about nulls

commit fe8ae6df027adbb287441a43308e90a0141e7682
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Thu Jun 30 13:54:49 2022 +0300

    testy test

commit 362848d312dcc87fcec2823655d19646d7e1b751
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Thu Jun 30 11:42:33 2022 +0300

    and test

commit 0f99d1fd07379624127bc1f569b8306930a2b849
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jun 29 18:39:30 2022 +0300

    te

--- a/infobip-mobile-messaging-android-inbox/build.gradle
+++ b/infobip-mobile-messaging-android-inbox/build.gradle
@@ -1,6 +1,20 @@
-plugins {
-    id 'com.android.library'
+buildscript {
+    repositories {
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+    }
 }
+
+apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'idea'
 
 android {
     compileSdkVersion mm_compileSdkVersion
@@ -9,9 +23,11 @@ android {
     defaultConfig {
         minSdkVersion mm_minSdkVersion
         targetSdkVersion mm_targetSdkVersion
-
+        versionCode 1
+        versionName project.version
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        consumerProguardFiles "proguard-rules.pro"
+        multiDexEnabled false
     }
 
     buildTypes {
@@ -24,14 +40,79 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
+    implementation project(":infobip-mobile-messaging-android-sdk")
+    implementation project(":infobip-mobile-messaging-api-java")
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation project(path: ':infobip-mobile-messaging-android-sdk')
-    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.nanohttpd:nanohttpd:2.1.0'
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation "org.mockito:mockito-core:1.10.19"
 }
+
+android.libraryVariants.all { variant ->
+    def name = variant.buildType.name
+    def jar = project.tasks.create(name: "jar${name.capitalize()}", type: Jar) {
+        Task javaCompileTask
+        if (variant.hasProperty('javaCompileProvider')) {
+            // Android 3.3.0+
+            javaCompileTask = variant.javaCompileProvider.get()
+        } else {
+            javaCompileTask = variant.javaCompile
+        }
+
+        dependsOn javaCompileTask
+        from javaCompileTask.destinationDir
+
+        manifest {
+            attributes(
+                    "Bundle-Name": 'parse-android',
+                    "Bundle-Version": project.version
+            )
+        }
+
+        exclude '**/R.class'
+        exclude '**/R\$*.class'
+        exclude '**/Manifest.class'
+        exclude '**/Manifest\$*.class'
+        exclude '**/BuildConfig.class'
+    }
+
+    artifacts {
+        archives jar
+    }
+}
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set('sources')
+}
+
+task javadoc(type: Javadoc) {
+    failOnError false
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    archiveClassifier.set('javadoc')
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+ext {
+    PUBLISH_ARTIFACT_ID = 'infobip-mobile-messaging-android-inbox'
+}
+apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
