Pull request #285: Mtokar MCA-2314 jenkins job demo chat for testers
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-2314_jenkins_job_demo_chat_for_testers to master

Squashed commit of the following:

commit fdc480caeac9cd4dda67c0ac8d23b609f35335d3
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Oct 14 13:31:54 2022 +0200

    remove printing of gradle file

commit 979d30d8f48e6f1fd041f421ccd8f7443050a3f9
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Oct 14 13:28:49 2022 +0200

    remove getApplicationCode

commit d4c426162b78eb567d5a6c99f99dd74e8f38d8d9
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Oct 14 11:52:25 2022 +0200

    read and set infobip application code

commit 1da1d5a18a9767280c050bf5f605b8a8f8eb77bc
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Oct 14 11:02:20 2022 +0200

    uncommentGoogleServices task fix

commit 1ac505305c9cc5a5a3aa2e90dbc333041d7dbbe2
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Oct 14 10:39:32 2022 +0200

    uncommentGoogleServices task

commit e3801c7b6b9f1fb830f0575da4207e4c019f664a
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Oct 14 10:01:39 2022 +0200

    add testfairy-upload.sh

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -111,5 +111,15 @@ private static String property(Project project, String projectKey, String enviro
     return project.hasProperty(projectKey) ? project[projectKey] : System.getenv(environmentKey)
 }
 
+task uncommentGoogleServices {
+    doLast {
+        def readmeFile = new File('infobip-mobile-messaging-android-demo/build.gradle')
+        def text = readmeFile.text
+        readmeFile.withWriter { w ->
+            w << text.replaceFirst("//apply plugin: 'com\\.google\\.gms\\.google-services'", "apply plugin: 'com\\.google\\.gms\\.google-services'")
+        }
+    }
+}
+
 //It's for usage of google-services.json file, if you are using strings.xml to provide Firebase data, comment next line
 //apply plugin: 'com.google.gms.google-services'
