--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -86,10 +86,15 @@ android {
         geofencing {
             dimension "default"
         }
+
+        inbox {
+            dimension "default"
+        }
     }
 }
 
 dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation "junit:junit:4.12"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
