--- a/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="org.infobip.mobile.messaging.demo">
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <application>
 
         <activity
