Pull request #297: Okoroleva MM-5353 GradleUpgrade
Merge in MML/infobip-mobile-messaging-android from okoroleva-MM-5353_GradleUpgrade to master

Squashed commit of the following:

commit ae908716163a259b91cb744a1b2762eb26f1a3b7
Merge: 0c52a988 01c59a22
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Nov 16 16:00:50 2022 +0100

    Merge commit '01c59a2244b16dbe6129579e6e5510fe684636de' into okoroleva-MM-5353_GradleUpgrade

commit 0c52a988dd3f10173e6dfd3e752caaa8c7889baf
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Nov 14 10:53:15 2022 +0000

    [Gradle Release Plugin] - new version commit:  '6.1.0-SNAPSHOT'.

commit e4f6981715b6095f94819b952ee6000d92408d6a
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Mon Nov 14 10:53:10 2022 +0000

    [Gradle Release Plugin] - pre tag commit:  '6.6.1-test'.

commit ca4a72e34c278bf8ac6ef39ec4812e45d9850176
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Nov 11 15:04:15 2022 +0100

    minor fixes

commit 733d2652cce0888e34e8621ffe64172dad351129
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Nov 11 14:57:59 2022 +0100

    minor enchancements

commit cbfadc747f764a35a8783b992cb72af76e842cdc
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Nov 11 14:07:39 2022 +0100

    minor fixes

commit 085cee69740801bc0bc36822c407467f3130421b
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Fri Oct 28 09:49:51 2022 +0000

    [Gradle Release Plugin] - new version commit:  '6.1.0-SNAPSHOT'.

commit 1659aeb784683ee1da3558dffff51bfe3e2bf1eb
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Oct 28 10:46:43 2022 +0300

    revered back all modules

commit dda7c29a276177bac9eddc279371349794030ecf
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Oct 28 10:17:36 2022 +0300

    XmlParser possible fix

commit 1e1923c20b1ab19f7abe2f8384e25e678dce78ab
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Oct 27 18:49:22 2022 +0300

    inp

commit 

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,10 @@
 buildscript {
-
     repositories {
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.4'
+        classpath 'com.android.tools.build:gradle:7.2.2'
     }
 }
 
@@ -30,15 +26,12 @@ ext {
 allprojects {
     repositories {
         mavenCentral()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
 }
 
+//It's required to be applied here, to have `subprojects.publish` task available
 subprojects {
-    apply plugin: "maven"
     apply plugin: "maven-publish"
 }
 
@@ -60,8 +53,15 @@ afterReleaseBuild.dependsOn updateVersionInReadme
 
 // workaround for `net.researchgate.release` plugin issue:
 // https://github.com/researchgate/gradle-release/issues/186
+
 task build {}
-build.dependsOn subprojects.findAll {!it.name.contains("demo")}.build
+
+build.dependsOn tasks.getByPath('infobip-mobile-messaging-android-chat-sdk:build')
+build.dependsOn tasks.getByPath('infobip-mobile-messaging-android-geo-sdk:build')
+build.dependsOn tasks.getByPath('infobip-mobile-messaging-android-cryptor-migration:build')
+build.dependsOn tasks.getByPath(':infobip-mobile-messaging-android-resources:build')
+build.dependsOn tasks.getByPath(':infobip-mobile-messaging-android-sdk:build')
+build.dependsOn tasks.getByPath(':infobip-mobile-messaging-api-java:build')
 
 nexusPublishing {
     repositories {
