--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ android.enableJetifier=true
 #org.gradle.daemon=true
 #org.gradle.configure?ondemand=true
 org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+android.disableAutomaticComponentCreation=true
