--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -7,7 +7,10 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.10'
     }
 }
-apply plugin: 'com.android.application'
+
+plugins {
+    id 'com.android.application'
+}
 
 android {
     compileSdkVersion 33
