--- a/infobip-mobile-messaging-android-test/build.gradle
+++ b/infobip-mobile-messaging-android-test/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+}
 
 android {
     compileSdkVersion mm_compileSdkVersion
@@ -10,6 +12,9 @@ android {
         versionCode 1
         versionName project.version
 
+        // since AGP 4.1 "VERSION_NAME" is not included anymore to BuildConfig
+        // https://issuetracker.google.com/issues/154275579
+        buildConfigField "String", "VERSION_NAME", "\"$versionName\""
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
@@ -27,7 +32,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'androidx.test.ext:junit:1.1.3'
     implementation 'androidx.test:runner:1.2.0'
