--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -89,10 +89,15 @@ android {
         geofencing {
             dimension "default"
         }
+
+        inbox {
+            dimension "default"
+        }
     }
 }
 
 dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation "junit:junit:4.12"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
@@ -101,6 +106,7 @@ dependencies {
     implementation project(":infobip-mobile-messaging-android-resources")
     implementation project(":infobip-mobile-messaging-android-sdk")
     implementation project(":infobip-mobile-messaging-api-java")
+    implementation project(":infobip-mobile-messaging-android-inbox-sdk")
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
