Pull request #312: MCA-2617 JWT Authentication for InAppChat, updated Demo application with auth usecase
Merge in MML/infobip-mobile-messaging-android from feature/MCA-2598_jwt_auth to master

Squashed commit of the following:

commit 87d4f1ff6e037660440bff3a49cf7f48b49a859e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jan 31 15:47:43 2023 +0100

    MCA-2617 JWT lib only for chat flavour

commit e8c214394455060f1800f61e0483db08ee95e787
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 13:56:41 2023 +0100

    MCA-2617 Hide progress bar

commit 43b88d45dbd233110a3772c79aafd6aadf6041ad
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 13:53:00 2023 +0100

    MCA-2617 Clean forgotten code

commit 270882a93204da11d095f8927d5fc23465d60d34
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 13:39:33 2023 +0100

    MCA-2617 Removed UI hardcoded values

commit 48350a5680602d74c6d119cf1169c0dfa9d40c62
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jan 30 11:42:01 2023 +0100

    MCA-2617 JWT Authentication for InAppChat, updated Demo application with auth usecase

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -112,6 +112,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 
+    //To add JWT use build flavour "chat"
+    chatImplementation 'com.nimbusds:nimbus-jose-jwt:9.0.1'
+
     //To add cryptor use build flavour "cryptorMigration"
     cryptorMigrationImplementation project(":infobip-mobile-messaging-android-cryptor-migration")
 }
